--- a/.github/workflows/aws-cdk.yml
+++ b/.github/workflows/aws-cdk.yml
@@ -34,10 +34,8 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           # Install your Python dependencies here
+          python -m pip install -r requirements.txt
           npm install -g aws-cdk
-
-      - name: Install GitHub CLI
-        run: sudo apt-get install gh
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
