--- a/.github/workflows/aws-cdk.yml
+++ b/.github/workflows/aws-cdk.yml
@@ -25,17 +25,42 @@ jobs:
         with:
           python-version: "3.11"
 
+      - name: Cache Python dependencies
+        uses: actions/cache@v3
+        with:
+          path: |
+            ~/.cache/pip
+            .venv/
+          key: ${{ runner.os }}-python-${{ hashFiles('requirements.txt') }}
+          restore-keys: |
+            ${{ runner.os }}-python-
+
+      - name: Install Python dependencies and CDK
+        run: |
+          python -m pip install --upgrade pip
+          python -m pip install -r requirements.txt
+          npm install -g aws-cdk
+
       - name: Set up Node.js 16
         uses: actions/setup-node@v4
         with:
           node-version: "16"
 
-      - name: Install Python dependencies and CDK
-        run: |
-          python -m pip install --upgrade pip
-          # Install your Python dependencies here
-          python -m pip install -r requirements.txt
-          npm install -g aws-cdk
+      - name: Cache Node.js modules
+        uses: actions/cache@v3
+        with:
+          path: |
+            ~/.npm
+            ~/.cache
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-
+
+      - name: Install Node.js dependencies
+        run: npm install
+
+      - name: Install GitHub CLI
+        run: sudo apt-get install gh
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
