--- a/.github/workflows/aws-cdk.yml
+++ b/.github/workflows/aws-cdk.yml
@@ -15,7 +15,7 @@ permissions:
 
 jobs:
   # Job for setting up environment and installing dependencies
-  setup_and_install:
+  deploy:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
@@ -47,13 +47,8 @@ jobs:
         with:
           node-version: "16"
 
-  # Job for running CDK diff
-  cdk_diff:
-    runs-on: ubuntu-latest
-    needs: setup_and_install
-    if: github.event_name == 'pull_request'
-    steps:
       - name: Run CDK Diff
+        if: github.event_name == 'pull_request'
         id: cdk_diff
         run: |
           cdk diff || echo "No differences found." > cdk_diff_output.txt
@@ -67,18 +62,6 @@ jobs:
           DIFF_OUTPUT=$(cdk diff || echo "No differences found.")
           gh pr comment ${{ github.event.pull_request.number }} --body "$DIFF_OUTPUT"
 
-  # Job for deploying to AWS
-  cdk_deploy:
-    runs-on: ubuntu-latest
-    needs: setup_and_install
-    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
-    steps:
-      - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v4
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ${{ env.AWS_REGION }}
-
       - name: Deploy to AWS
+        if: github.event_name == 'push' && github.ref == 'refs/heads/main'
         run: cdk deploy --require-approval=never
