--- a/.github/workflows/aws-cdk.yml
+++ b/.github/workflows/aws-cdk.yml
@@ -46,7 +46,14 @@ jobs:
           python -m pip install --upgrade pip
           python -m pip install -r requirements.txt
           npm install -g aws-cdk
-
+      
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ env.AWS_REGION }}
+        
       - name: Run CDK Diff
         if: github.event_name == 'pull_request'
         id: cdk_diff
