--- a/config.json
+++ b/config.json
@@ -1,3 +1,4 @@
 {
-    "bucketName": "www.thirteentech.com"
+    "bucketName": "www.thirteentech.com",
+    "customDomain": "www.thirteen-tech.com"
 }
