--- a/config.json
+++ b/config.json
@@ -1,4 +1,4 @@
 {
     "bucketName": "www.thirteentech.com",
-    "customDomain": "www.thirteen-tech.com"
+    "customDomain": " http://www.thirteen-tech.com"
 }
